<resources>
    <string name="app_name">InventoryApp_Arica_Bryant</string>
    <string name="inventory_tracker">Inventory Tracker</string>
    <string name="please_enter_your_username">Please enter your username</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="create_account">Create Account</string>
    <string name="enter_an_item">Enter an item</string>
    <string name="add_button">Add Button</string>
    <string name="add_new_item">Add New Item</string>
    <string name="enter_the_item_name">Enter the Item Name:</string>
    <string name="name">name</string>
    <string name="enter_the_item_quantity">Enter the Item Quantity:</string>
    <string name="quantity">quantity</string>
    <string name="increase">Increase</string>
    <string name="decrease">Decrease</string>
    <string name="save">Save</string>
    <string name="remove_item">Remove Item</string>
    <string name="add_item">Add Item</string>
    <string name="item_1">Item 1</string>
    <string name="item_quantity">Item Quantity</string>
    <string name="delete">Delete</string>
    <string name="Name">Name</string>
    <string name="Quantity">Quantity</string>
    <string name="enable_sms">Enable SMS</string>
    <string name="sms_settings">SMS Settings</string>
    <string name="enable_sms_notifications">Enable SMS Notifications</string>
    <string name="back">Back</string>
    <string name="you_must_enter_a_username_and_password">You must enter a username and password</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="Inventory_activity">inventory activity</string>
    <string name="Register_activity">register activity</string>
    <string name="disable_sms">Disable SMS</string>
    <string name="please_enter_your_phone_number">Please enter your phone number:</string>
    <string name="set_phone_number">Set phone number</string>
    <string name="incorrect_password">Incorrect Password</string>
    <string name="username_already_exists">Username already exists</string>
    <string name="username_and_password_not_found">Username and Password not found</string>
    <string name="register">Register</string>
    <string name="image_of_person_symbol">Image of person symbol</string>
    <string name="displays_title">Displays Title</string>
    <string name="Register">Register</string>
    <string name="Item_Editor">item editor</string>
    <string name="Inventory">inventory</string>
    <string name="SMS_Notifications">SMS Notifications</string>
    <string name="enable_sms_permissions_to_be_notified_when_an_inventory_item_is_low_on_stock_click_the_button_below_to_grant_permission_you_may_revoke_access_at_any_time_from_your_device_s_settings">Enable SMS permissions to be notified when an inventory item is low on stock. Click the button below to grant permission. You may revoke access at any time from your device\'s settings.</string>
    <string name="logo_for_app">Logo for app</string>
</resources>